cmake_minimum_required(VERSION 3.28)

project(CUTE-TRANSPOSE-NAIVE-TEST VERSION 0.0.1 LANGUAGES CXX CUDA)

find_package(GTest REQUIRED)
# Find CUDA Toolkit
find_package(CUDAToolkit REQUIRED)

find_path(CUTE_TRANSPOSE_INCLUDE cute_transpose.hpp HINTS ${CMAKE_SOURCE_DIR}/examples/cute_transpose/)

add_executable(test_matrix_transpose_naive_coalesced_read test_matrix_transpose_naive_coalesced_read.cu)
target_include_directories(test_matrix_transpose_naive_coalesced_read PRIVATE ${CUTE_TRANSPOSE_INCLUDE})
target_link_libraries(test_matrix_transpose_naive_coalesced_read GTest::gtest GTest::gtest_main ${CUTE_TRANSPOSE})
set_target_properties(test_matrix_transpose_naive_coalesced_read PROPERTIES CUDA_ARCHITECTURES native)

add_test(TestAllMatrixTransposeNaiveCoalescedRead test_matrix_transpose_naive_coalesced_read)

add_executable(profile_matrix_transpose_naive_coalesced_read profile_matrix_transpose_naive_coalesced_read.cu)
target_include_directories(profile_matrix_transpose_naive_coalesced_read PRIVATE ${CUTE_TRANSPOSE_INCLUDE})
target_link_libraries(profile_matrix_transpose_naive_coalesced_read GTest::gtest GTest::gtest_main ${CUTE_TRANSPOSE})
set_target_properties(profile_matrix_transpose_naive_coalesced_read PROPERTIES CUDA_ARCHITECTURES native)

add_test(ProfileAllMatrixTransposeNaiveCoalescedRead profile_matrix_transpose_naive_coalesced_read)

add_executable(test_matrix_transpose_naive_coalesced_write test_matrix_transpose_naive_coalesced_write.cu)
target_include_directories(test_matrix_transpose_naive_coalesced_write PRIVATE ${CUTE_TRANSPOSE_INCLUDE})
target_link_libraries(test_matrix_transpose_naive_coalesced_write GTest::gtest GTest::gtest_main ${CUTE_TRANSPOSE})
set_target_properties(test_matrix_transpose_naive_coalesced_write PROPERTIES CUDA_ARCHITECTURES native)

add_test(TestAllMatrixTransposeNaiveCoalescedWrite test_matrix_transpose_naive_coalesced_write)

add_executable(profile_matrix_transpose_naive_coalesced_write profile_matrix_transpose_naive_coalesced_write.cu)
target_include_directories(profile_matrix_transpose_naive_coalesced_write PRIVATE ${CUTE_TRANSPOSE_INCLUDE})
target_link_libraries(profile_matrix_transpose_naive_coalesced_write GTest::gtest GTest::gtest_main ${CUTE_TRANSPOSE})
set_target_properties(profile_matrix_transpose_naive_coalesced_write PROPERTIES CUDA_ARCHITECTURES native)

add_test(ProfileAllMatrixTransposeNaiveCoalescedWrite profile_matrix_transpose_naive_coalesced_write)

add_executable(test_matrix_transpose_shared_memory_bank_conflicts test_matrix_transpose_shared_memory_bank_conflicts.cu)
target_include_directories(test_matrix_transpose_shared_memory_bank_conflicts PRIVATE ${CUTE_TRANSPOSE_INCLUDE})
target_link_libraries(test_matrix_transpose_shared_memory_bank_conflicts GTest::gtest GTest::gtest_main ${CUTE_TRANSPOSE})
set_target_properties(test_matrix_transpose_shared_memory_bank_conflicts PROPERTIES CUDA_ARCHITECTURES native)

add_test(TestAllMatrixTransposeSharedMemoryBankConflicts test_matrix_transpose_shared_memory_bank_conflicts)

add_executable(profile_matrix_transpose_shared_memory_bank_conflicts profile_matrix_transpose_shared_memory_bank_conflicts.cu)
target_include_directories(profile_matrix_transpose_shared_memory_bank_conflicts PRIVATE ${CUTE_TRANSPOSE_INCLUDE})
target_link_libraries(profile_matrix_transpose_shared_memory_bank_conflicts GTest::gtest GTest::gtest_main ${CUTE_TRANSPOSE})
set_target_properties(profile_matrix_transpose_shared_memory_bank_conflicts PROPERTIES CUDA_ARCHITECTURES native)

add_test(ProfileAllMatrixTransposeSharedMemoryBankConflicts profile_matrix_transpose_shared_memory_bank_conflicts)


add_executable(test_matrix_transpose_shared_memory_padded test_matrix_transpose_shared_memory_padded.cu)
target_include_directories(test_matrix_transpose_shared_memory_padded PRIVATE ${CUTE_TRANSPOSE_INCLUDE})
target_link_libraries(test_matrix_transpose_shared_memory_padded GTest::gtest GTest::gtest_main ${CUTE_TRANSPOSE})
set_target_properties(test_matrix_transpose_shared_memory_padded PROPERTIES CUDA_ARCHITECTURES native)

add_test(TestAllMatrixTransposeSharedMemoryPadded test_matrix_transpose_shared_memory_padded)

add_executable(profile_matrix_transpose_shared_memory_padded profile_matrix_transpose_shared_memory_padded.cu)
target_include_directories(profile_matrix_transpose_shared_memory_padded PRIVATE ${CUTE_TRANSPOSE_INCLUDE})
target_link_libraries(profile_matrix_transpose_shared_memory_padded GTest::gtest GTest::gtest_main ${CUTE_TRANSPOSE})
set_target_properties(profile_matrix_transpose_shared_memory_padded PROPERTIES CUDA_ARCHITECTURES native)

add_test(ProfileAllMatrixTransposeSharedMemoryPadded profile_matrix_transpose_shared_memory_padded)

