cmake_minimum_required(VERSION 3.28)

project(CUTE-TRANSPOSE-NAIVE-TEST VERSION 0.0.1 LANGUAGES CXX CUDA)

find_package(GTest REQUIRED)
find_package(CUDAToolkit REQUIRED)

find_path(CUTE_TRANSPOSE_INCLUDE cute_transpose.hpp HINTS ${CMAKE_SOURCE_DIR}/examples/cute_transpose/)

add_executable(test_matrix_transpose_naive_coalesced_read test_matrix_transpose_naive_coalesced_read.cu)
target_include_directories(test_matrix_transpose_naive_coalesced_read PRIVATE ${CUTE_TRANSPOSE_INCLUDE})
target_link_libraries(test_matrix_transpose_naive_coalesced_read GTest::gtest GTest::gtest_main ${CUTE_TRANSPOSE})
set_target_properties(test_matrix_transpose_naive_coalesced_read PROPERTIES CUDA_ARCHITECTURES native)

add_test(TestAllMatrixTransposeNaiveCoalescedRead test_matrix_transpose_naive_coalesced_read)

add_executable(profile_matrix_transpose_naive_coalesced_read profile_matrix_transpose_naive_coalesced_read.cu)
target_include_directories(profile_matrix_transpose_naive_coalesced_read PRIVATE ${CUTE_TRANSPOSE_INCLUDE})
target_link_libraries(profile_matrix_transpose_naive_coalesced_read GTest::gtest GTest::gtest_main ${CUTE_TRANSPOSE})
set_target_properties(profile_matrix_transpose_naive_coalesced_read PROPERTIES CUDA_ARCHITECTURES native)

add_test(ProfileAllMatrixTransposeNaiveCoalescedRead profile_matrix_transpose_naive_coalesced_read)

add_executable(test_matrix_transpose_naive_coalesced_write test_matrix_transpose_naive_coalesced_write.cu)
target_include_directories(test_matrix_transpose_naive_coalesced_write PRIVATE ${CUTE_TRANSPOSE_INCLUDE})
target_link_libraries(test_matrix_transpose_naive_coalesced_write GTest::gtest GTest::gtest_main ${CUTE_TRANSPOSE})
set_target_properties(test_matrix_transpose_naive_coalesced_write PROPERTIES CUDA_ARCHITECTURES native)

add_test(TestAllMatrixTransposeNaiveCoalescedWrite test_matrix_transpose_naive_coalesced_write)

add_executable(profile_matrix_transpose_naive_coalesced_write profile_matrix_transpose_naive_coalesced_write.cu)
target_include_directories(profile_matrix_transpose_naive_coalesced_write PRIVATE ${CUTE_TRANSPOSE_INCLUDE})
target_link_libraries(profile_matrix_transpose_naive_coalesced_write GTest::gtest GTest::gtest_main ${CUTE_TRANSPOSE})
set_target_properties(profile_matrix_transpose_naive_coalesced_write PROPERTIES CUDA_ARCHITECTURES native)

add_test(ProfileAllMatrixTransposeNaiveCoalescedWrite profile_matrix_transpose_naive_coalesced_write)


add_executable(test_matrix_transpose_shared_memory_bank_conflict_read test_matrix_transpose_shared_memory_bank_conflict_read.cu)
target_include_directories(test_matrix_transpose_shared_memory_bank_conflict_read PRIVATE ${CUTE_TRANSPOSE_INCLUDE})
target_link_libraries(test_matrix_transpose_shared_memory_bank_conflict_read GTest::gtest GTest::gtest_main ${CUTE_TRANSPOSE})
set_target_properties(test_matrix_transpose_shared_memory_bank_conflict_read PROPERTIES CUDA_ARCHITECTURES native)

add_test(TestAllMatrixTransposeSharedMemoryBankConflictRead test_matrix_transpose_shared_memory_bank_conflict_read)

add_executable(profile_matrix_transpose_shared_memory_bank_conflict_read profile_matrix_transpose_shared_memory_bank_conflict_read.cu)
target_include_directories(profile_matrix_transpose_shared_memory_bank_conflict_read PRIVATE ${CUTE_TRANSPOSE_INCLUDE})
target_link_libraries(profile_matrix_transpose_shared_memory_bank_conflict_read GTest::gtest GTest::gtest_main ${CUTE_TRANSPOSE})
set_target_properties(profile_matrix_transpose_shared_memory_bank_conflict_read PROPERTIES CUDA_ARCHITECTURES native)

add_test(ProfileAllMatrixTransposeSharedMemoryBankConflictRead profile_matrix_transpose_shared_memory_bank_conflict_read)

add_executable(test_matrix_transpose_shared_memory_bank_conflict_write test_matrix_transpose_shared_memory_bank_conflict_write.cu)
target_include_directories(test_matrix_transpose_shared_memory_bank_conflict_write PRIVATE ${CUTE_TRANSPOSE_INCLUDE})
target_link_libraries(test_matrix_transpose_shared_memory_bank_conflict_write GTest::gtest GTest::gtest_main ${CUTE_TRANSPOSE})
set_target_properties(test_matrix_transpose_shared_memory_bank_conflict_write PROPERTIES CUDA_ARCHITECTURES native)

add_test(TestAllMatrixTransposeSharedMemoryBankConflictWrite test_matrix_transpose_shared_memory_bank_conflict_write)

add_executable(profile_matrix_transpose_shared_memory_bank_conflict_write profile_matrix_transpose_shared_memory_bank_conflict_write.cu)
target_include_directories(profile_matrix_transpose_shared_memory_bank_conflict_write PRIVATE ${CUTE_TRANSPOSE_INCLUDE})
target_link_libraries(profile_matrix_transpose_shared_memory_bank_conflict_write GTest::gtest GTest::gtest_main ${CUTE_TRANSPOSE})
set_target_properties(profile_matrix_transpose_shared_memory_bank_conflict_write PROPERTIES CUDA_ARCHITECTURES native)

add_test(ProfileAllMatrixTransposeSharedMemoryBankConflictWrite profile_matrix_transpose_shared_memory_bank_conflict_write)

add_executable(test_matrix_transpose_shared_memory_padded test_matrix_transpose_shared_memory_padded.cu)
target_include_directories(test_matrix_transpose_shared_memory_padded PRIVATE ${CUTE_TRANSPOSE_INCLUDE})
target_link_libraries(test_matrix_transpose_shared_memory_padded GTest::gtest GTest::gtest_main ${CUTE_TRANSPOSE})
set_target_properties(test_matrix_transpose_shared_memory_padded PROPERTIES CUDA_ARCHITECTURES native)

add_test(TestAllMatrixTransposeSharedMemoryPadded test_matrix_transpose_shared_memory_padded)

add_executable(profile_matrix_transpose_shared_memory_padded profile_matrix_transpose_shared_memory_padded.cu)
target_include_directories(profile_matrix_transpose_shared_memory_padded PRIVATE ${CUTE_TRANSPOSE_INCLUDE})
target_link_libraries(profile_matrix_transpose_shared_memory_padded GTest::gtest GTest::gtest_main ${CUTE_TRANSPOSE})
set_target_properties(profile_matrix_transpose_shared_memory_padded PROPERTIES CUDA_ARCHITECTURES native)

add_test(ProfileAllMatrixTransposeSharedMemoryPadded profile_matrix_transpose_shared_memory_padded)

add_executable(test_matrix_transpose_shared_memory_swizzled test_matrix_transpose_shared_memory_swizzled.cu)
target_include_directories(test_matrix_transpose_shared_memory_swizzled PRIVATE ${CUTE_TRANSPOSE_INCLUDE})
target_link_libraries(test_matrix_transpose_shared_memory_swizzled GTest::gtest GTest::gtest_main ${CUTE_TRANSPOSE})
set_target_properties(test_matrix_transpose_shared_memory_swizzled PROPERTIES CUDA_ARCHITECTURES native)

add_test(TestAllMatrixTransposeSharedMemorySwizzled test_matrix_transpose_shared_memory_swizzled)

add_executable(profile_matrix_transpose_shared_memory_swizzled profile_matrix_transpose_shared_memory_swizzled.cu)
target_include_directories(profile_matrix_transpose_shared_memory_swizzled PRIVATE ${CUTE_TRANSPOSE_INCLUDE})
target_link_libraries(profile_matrix_transpose_shared_memory_swizzled GTest::gtest GTest::gtest_main ${CUTE_TRANSPOSE})
set_target_properties(profile_matrix_transpose_shared_memory_swizzled PROPERTIES CUDA_ARCHITECTURES native)

add_test(ProfileAllMatrixTransposeSharedMemorySwizzled profile_matrix_transpose_shared_memory_swizzled)
